# unfolding-space

./: .CHANGELOG.swp  .VERSION.swp  .gitignore  ATTRIBUTIONS.md  LICENSE  Makefile  RANTS  README  README.md  TODO  camera.cpp  camera.hpp  definitions.hpp  globals.cpp  globals.hpp  glove.cpp  glove.hpp  glove.py  image_functions.py  init.cpp  init.hpp  libroyale  local  main.cpp  monitoring.cpp  monitoring.hpp  poti.cpp  poti.hpp  requirements.txt  roypy_sample_utils.py  timelog.cpp  timelog.hpp  udp.cpp  udp.hpp  udpApi.md  unfolding.py  video.py
Android_UnfoldingMonitor/: AndroidManifest.xml
Arduino_Digispark-Poti/: digispark_poti.ino
Raspberry_Main-Code/: camera.cpp  glove.hpp
UnfoldingMonitor/: UnfoldingMonitor.pde
doc/: README.md  TCA-PCA-overview.md  drv2605l-register-overview.md  latencies-overview.md
legacy/poti/: poti.cpp  poti.hpp
libroyale-3.20.0.62-LINUX-arm-32Bit/: CHANGELOG.txt  README.md
libroyale-3.20.0.62-LINUX-arm-32Bit/samples/: CMakeLists.txt  README_samples.md
libroyale-3.23.0.86-LINUX-arm-32Bit/: CHANGELOG.txt
libroyale-3.23.0.86-LINUX-arm-32Bit/samples/cpp/sampleIReplay/: CMakeLists.txt  sampleIReplay.cpp
src/: Camera.cpp  Camera.hpp  Globals.cpp  Globals.hpp  I2C.cpp  I2C.hpp  Imu.cpp  Imu.hpp  LSM6DSM.cpp  Led.cpp  Led.hpp  MMC5633.cpp  MMC5633.h  MotorBoard.cpp  MotorBoard.hpp  MotorBoardDefs.hpp  TimeLogger.cpp  TimeLogger.hpp  UdpClient.cpp  UdpClient.hpp  UdpServer.cpp  UdpServer.hpp  WiringPiI2C.cpp  converter.cpp  converter.h  depthDataConsumer.h  glove.h  listener.cpp  listener.hpp  main.cpp  q.h
src/i2c/: I2C.cpp  (+5 more)
(+53 files in other folders)
